fix: overlap and remove z index attempts

--- a/results.css
+++ b/results.css
@@ -31,8 +31,6 @@ p {
   border-radius: 25px;
   align-items: center;
   text-align: center;
-  margin-right: -20px;
-  z-index: 2;
   background: linear-gradient(
     to bottom,
     rgba(120, 87, 255, 1) 10%,
@@ -46,7 +44,6 @@ p {
   border-radius: 0px 25px 25px 0px;
   grid-template-rows: auto auto;
   justify-content: space-between;
-  z-index: 1;
 }
 
 .overall-score {
@@ -61,7 +58,7 @@ p {
     hsla(241, 72%, 46%, 0)
   );
   width: 50%;
-  height: 35%;
+  aspect-ratio: 1 / 1;
   padding: 10px;
   margin-bottom: 40px;
   color: hsl(0, 0%, 100%);
@@ -200,32 +197,25 @@ a:hover {
   );
 }
 
-@media (max-width: 375px) {
+@media (max-width: 715px) {
   main {
     width: 100%;
+    align-items: flex-start;
   }
 
   .main-card {
     display: flex;
     flex-direction: column;
-    position: relative;
     width: 100%;
-    margin-left: -15px;
-    flex-shrink: 1;
   }
 
   .result-card {
     width: 100%;
     border-radius: 0px 0px 15px 15px;
-    z-index: 2;
-    margin-bottom: -20px;
-    flex-shrink: 1;
   }
 
   .summary-card {
     width: 100%;
     border-radius: 0px;
-    z-index: 1;
-    flex-shrink: 1;
   }
 }
